# trading_phantom

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  ANALISIS_ENTRENAMIENTO_MEJORADO.md  ANALISIS_M1_VIABILIDAD.md  ARQUITECTURA_MODULAR.md  AUDITORIA_CORPORATIVA.md  AUDITORIA_PROYECTO.md  AUDITORIA_SUMARIO.txt  BOT_EJECUCION_EN_VIVO.md  CAMBIOS_REALIZADOS.md  CHANGELOG.md  CHECKLIST_FINAL.md  COMO_VER_RESULTADOS.md  CONTRIBUTING.md  DIAGRAMA_ESTRUCTURA.txt  DOCUMENTATION_COMPLETE.md  ESTRUCTURA_FINAL.md  IMPLEMENTACION_COMPLETADA.txt  INDEX.md  INDEX_BACKTEST_MEJORAS.md  INDICE_EJECUTIVO.md  INDICE_VISUAL.txt  INICIO_CORPORATIVO.md  MANUAL_OPERATIVO.md  MATRIZ_ARCHIVOS.md  ML_TRAINING_DASHBOARD.html  QUICK_START.md  QUICK_START_NEW_FEATURES.md  REORGANIZACION_COMPLETADA.md  RESUMEN_ENTRENAMIENTO_SEGUNDA_ITERACION.md  RESUMEN_FINAL.md  RSISMAStrategy.html  RUN.bat  RUN_TESTS.bat  RUN_TESTS.ps1  Readme.md  SEGUNDO_ENTRENAMIENTO_VISUAL.md  START_HERE.txt  (+26 more)
.github/workflows/: ci.yml
archive/code/: README.md
archive/docs_root_archive/: BUILD_INSTALLER.ps1  COMO_VER_RESULTADOS.md  DASHBOARD_INSTRUCTIONS.txt  INDEX_BACKTEST_MEJORAS.md  QUICK_START_NEW_FEATURES.md  RUN_TESTS.ps1  UNINSTALL.bat  run_demo.bat
backtest/: metrics.py  run_and_visual.py  run_backtest.py  simulation.py  visual_backtest.py
backtesting/: README.md  backtest_advanced_model.py  backtest_improved_strategy.py  metrics.py  run_and_visual.py  run_backtest.py  run_backtest_parallel.py  simulation.py  visual_backtest.py
backtesting/resultados/: backtest_results_advanced.json  backtest_results_improved_strategy.json
bot/: bot_monitor.py  start_bot.py
config/: config.yaml  config_loader.py
core/: orchestrator.py
dashboards/: BACKTESTING_DASHBOARD.html  BOT_DASHBOARD.html  ML_ADVANCED_DASHBOARD.html
docker/: Dockerfile
docs/: AI_INTEGRATION.md  ALL_DOCS_SUMMARY.md  API.md  ARCHITECTURE.md  QUICKSTART.md  README.md  RECENT_ACTIONS.md  file_map.md  index.md
docs/análisis/: ANALISIS_MEJORAS_ESTRATEGIA.md  BACKTESTING_PARALELO.md
docs/archived_md/: 00_START_HERE.md  ANALISIS_ENTRENAMIENTO_MEJORADO.md  AUDITORIA_CORPORATIVA.md  AUDITORIA_DETALLADA.md  AUDITORIA_PROYECTO.md  BOT_EJECUCION_EN_VIVO.md  CAMBIOS_REALIZADOS.md  CHECKLIST_FINAL.md  COMO_VER_RESULTADOS.md  ESTRUCTURA_FINAL.md  EXECUTION_NOTE.md  INDEX_BACKTEST_MEJORAS.md  INDEX_ENTRENAMIENTO.md  INDICE_EJECUTIVO.md  INICIO_CORPORATIVO.md  MATRIZ_ARCHIVOS.md  QUICK_START_NEW_FEATURES.md  README.md  REORGANIZACION_COMPLETADA.md  RESUMEN_ENTRENAMIENTO_SEGUNDA_ITERACION.md  RESUMEN_FINAL.md
docs/archived_md/analisis/: ANALISIS_ENTRENAMIENTO_MEJORADO.md  INDEX_BACKTEST_MEJORAS.md  INDEX_ENTRENAMIENTO.md
docs/archived_md/guias/: 00_START_HERE.md  ARQUITECTURA_MODULAR.md  AUDITORIA_CORPORATIVA.md  AUDITORIA_DETALLADA.md  AUDITORIA_PROYECTO.md  BOT_EJECUCION_EN_VIVO.md  CAMBIOS_REALIZADOS.md  CHECKLIST_FINAL.md  COMO_VER_RESULTADOS.md  ESTRUCTURA_FINAL.md  MATRIZ_ARCHIVOS.md  QUICK_START_NEW_FEATURES.md
docs/archived_md/resumenes/: INDICE_EJECUTIVO.md  INICIO_CORPORATIVO.md  REORGANIZACION_COMPLETADA.md  RESUMEN_ENTRENAMIENTO_SEGUNDA_ITERACION.md  RESUMEN_FINAL.md
docs/guias/: MANUAL_OPERATIVO.md  QUICK_START_BOT_VIVO.md
docs/md_templates/: README_TEMPLATE.md
docs/resúmenes/: BOT_EN_VIVO.md  QUE_PASO_RESUMEN.md  README_BACKUP_PRECONSOLIDATION.md  RESUMEN_EJECUTIVO_BACKTEST_MEJORAS.md
documentacion/: ARCHIVOS_Y_FUNCIONES.md  INDEX.md  MODEL_VERSIONING.md  README.md  generate_pdf.py
legacy/archive/docs_root_archive/: AUDITORIA_PROYECTO.md  BUILD_EXE.ps1  CAMBIOS_REALIZADOS.md  CHECKLIST_FINAL.md  COMIENZA_AQUI.txt  CONTRIBUTING.md  ESTADO_FINAL.txt  ESTRUCTURA_FINAL.md  INSTALL.bat  INSTALL.ps1  RESUMEN_ULTRA.txt  UPDATES_STRATEGY_AND_HISTORY.md
legacy/legacy_root/: setup_training_data.py
legacy_root/: __init__.py  main.py  test_mt5.py
modules/: __init__.py  data_loader.py  risk_manager.py  strategy.py  trade_history.py  trader.py
mt5/: connector.py  symbol_debugger.py
scripts/: __init__.py  build_installer.ps1  call_bot.ps1  call_bot.py  check_torch.py  example_trade_history.py  launcher.py  list_models.py  ml_train.py  ml_train_advanced.py  run_backtest_dryrun.py  run_pytest.py  test_backtest.ps1  test_import.py  test_save_model.py  train_lstm.py  train_lstm_full.py  train_rl.py  train_rl_full.py
scripts/legacy/: backtest_advanced.py  verify_installation.py
scripts/legacy/cleaned_root/: ROOT_README_UPDATED.md  RUN_TESTS.bat  __init__.py  ci-log-20862009071.txt  ci-log-20862132585.txt  ci-log-20862194656.txt
src/data/: trading_phantom.db
src/data/models/: latest_model.json  models_index.json
src/data/models_test_for_ci/: latest_model.json  models_index.json  tst_20260202T165725Z.joblib
src/trading_phantom/: __init__.py  main.py  webapp.py
src/trading_phantom/analytics/: backtest_env.py  collector.py  db.py  knowledge_base.py  lstm_model.py  ml_pipeline.py  model_store.py  rl_agent.py  transfer_learning.py
src/trading_phantom/api/: __init__.py  analytics.py  backtest.py  bot.py  knowledge.py  logs.py
src/trading_phantom/backtest/: run_and_visual.py  visual_backtest.py
src/trading_phantom/config/: config.yaml
templates/: index.html
tests/: conftest.py  test_bot_endpoints.py  test_ml_smoke.py  test_model_store.py  test_mt5_connector.py  test_strategy.py  test_visual_adapter.py
tools/: README.md  check_bot_functionalities.py  debug_strategy.py
trading_phantom/: Readme.md
utils/: trade_logger.py
(+130 files in other folders)
