# ═══════════════════════════════════════════════════════════════════════════════
#                      TRADING PHANTOM - Project Configuration
# ═══════════════════════════════════════════════════════════════════════════════

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-phantom"
version = "1.0.0"
description = "Professional algorithmic trading framework for MetaTrader 5"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Trading Phantom Team"}
]
keywords = [
    "trading",
    "algorithmic-trading",
    "metatrader5",
    "mt5",
    "forex",
    "quantitative-finance",
    "backtesting",
    "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "Flask>=2.3",
    "PyYAML>=6.0",
    "requests>=2.31",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]

[project.optional-dependencies]
mt5 = ["MetaTrader5>=5.0"]
ml = [
    "torch>=2.0",
    "stable-baselines3>=2.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "black>=23.0",
    "mypy>=1.5",
    "pre-commit>=3.4",
]
all = ["trading-phantom[mt5,ml,dev]"]

[project.urls]
Homepage = "https://github.com/blaspinto5/trading_phantom"
Documentation = "https://github.com/blaspinto5/trading_phantom/tree/main/docs"
Repository = "https://github.com/blaspinto5/trading_phantom"
Issues = "https://github.com/blaspinto5/trading_phantom/issues"

[project.scripts]
trading-phantom = "trading_phantom.main:main"

# ─────────────────────────────────────────────────────────────────────────────────
# Tool Configuration
# ─────────────────────────────────────────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

# ─────────────────────────────────────────────────────────────────────────────────
# Ruff - Fast Python Linter
# ─────────────────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B904",   # raise without from
    "ARG001", # unused function argument
]

[tool.ruff.lint.isort]
known-first-party = ["trading_phantom"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Exclude legacy and archive directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "legacy",
    "archive",
    "*.egg-info",
]

# ─────────────────────────────────────────────────────────────────────────────────
# Black - Code Formatter
# ─────────────────────────────────────────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | build
    | dist
    | legacy
    | archive
)/
'''

# ─────────────────────────────────────────────────────────────────────────────────
# MyPy - Static Type Checker
# ─────────────────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "legacy",
    "archive",
    "build",
    "dist",
]

# ─────────────────────────────────────────────────────────────────────────────────
# Pytest - Testing
# ─────────────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "mt5: marks tests that require MetaTrader5",
]

# ─────────────────────────────────────────────────────────────────────────────────
# Coverage - Code Coverage
# ─────────────────────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/legacy/*",
    "*/archive/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
